# bump

./: Cargo.toml  LICENSE  README.md
bump/: Cargo.toml
bump/src/: main.rs  utils.rs
test-workspace/: Cargo.toml
test-workspace/a/: CHANGELOG.md  Cargo.toml
test-workspace/b/: Cargo.toml
test-workspace/c/: Cargo.toml
