[package]
name = "bump"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
arboard = { version = "3", default-features = false }
camino = "1"
cargo_metadata = "0.18"
dialoguer = { version = "0.11", default-features = false, features = ["fuzzy-select"] }
itertools = "0.12"
semver = "1"
toml_edit = "0.21"
